# benchy

./: .gitignore  README.md  docker-compose.yml
cpp-crow/: CMakeLists.txt  Containerfile  main.cpp
golang-gin/: Containerfile  go.mod  main.go
loadtest/k6/: level1_hello.js  level2_normal.js  level3_cpu.js  level4_strings.js  quick_test.js
php/: Containerfile  index.php  nginx.conf
python-fastapi/: Containerfile  app.py
scripts/: analyze_results.py  collect_metrics.sh  run_benchmarks.sh  run_isolated_benchmark.sh  visualize.py
